# smart-climate-ha

./: .gitignore  PLAN.md  README.md  hacs.json  pyproject.toml
custom_components/smart_climate/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  models.py  select.py  sensor.py  services.py  services.yaml  strings.json
custom_components/smart_climate/ai/: __init__.py  analysis.py  anthropic_provider.py  gemini_provider.py  grok_provider.py  ollama_provider.py  openai_provider.py  prompts.py  provider.py  suggestions.py
custom_components/smart_climate/helpers/: __init__.py  auxiliary.py  comfort.py  efficiency.py  presence.py  scheduling.py  statistics.py  vents.py
custom_components/smart_climate/translations/: en.json
custom_components/smart_climate/www/: smart-climate-card.js
smart-climate-card/: package.json  rollup.config.js  tsconfig.json
smart-climate-card/src/: smart-climate-card.ts
smart-climate-card/src/components/: auxiliary-status.ts  efficiency-chart.ts  house-overview.ts  room-detail.ts  room-tile.ts  schedule-view.ts  suggestion-panel.ts
smart-climate-card/src/styles/: animations.ts  card-styles.ts  theme.ts
smart-climate-card/src/utils/: formatters.ts  ha-api.ts
tests/: __init__.py  conftest.py  mock_homeassistant.py  test_ai_providers.py  test_button_and_sensors.py  test_comfort.py  test_config_flow.py  test_coordinator.py  test_efficiency.py  test_services.py
